#159 service detached from layer
